# cf-socialjax

./: .gitignore  CF_HYPERPARAMETERS.md  FINDINGS.md  README.md  environment.yml  pyproject.toml  requirements.txt
algorithms/CF/: cf_cnn_cleanup.py  cf_cnn_coins.py  cf_cnn_coop_mining.py  cf_cnn_gift.py  cf_cnn_harvest_common.py  cf_cnn_mushrooms.py  cf_cnn_pd_arena.py  cf_cnn_territory_open.py
algorithms/CF/config/: cf_cnn_cleanup.yaml  cf_cnn_coins.yaml  cf_cnn_coop_mining.yaml  cf_cnn_gift.yaml  cf_cnn_harvest_common.yaml  cf_cnn_mushrooms.yaml  cf_cnn_pd_arena.yaml  cf_cnn_territory_open.yaml
autoresearch/: program.md  run.sh  run_experiment.sh  run_gpu_worker.sh  run_multi_gpu.sh
autoresearch/shared/: get_best.sh  lock.sh  results.tsv  sync_best.sh
scripts/: eval_coop_mining_sweep.sh  eval_prosocial_advmod.sh  run_with_hook.py
socialjax/: __init__.py  registration.py
socialjax/environments/: __init__.py  multi_agent_env.py  spaces.py
socialjax/environments/cleanup/: README.md  __init__.py  clean_up.py
socialjax/environments/coin_game/: README.md  coin_game.py
socialjax/environments/common_harvest/: README.md  __init__.py  harvest_open.py
socialjax/environments/coop_mining/: README.md  __init__.py  coop_mining.py  rendering.py
socialjax/environments/gift/: README.md  __init__.py  gift.py  rendering.py
socialjax/environments/mushrooms/: README.md  __init__.py  mushrooms.py
socialjax/environments/pd_arena/: __init__.py  pd_arena.py
socialjax/environments/territory/: README.md  __init__.py  territory_env.py
socialjax/wrappers/: baselines.py  gymnax.py  transformers.py
