[project]
name = "socialjaxproject"
version = "0.1.0"
description = ""
authors = [
    {name = "",email = ""}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
absl-py = "2.1.0"
antlr4-python3-runtime = "4.9.3"
blinker = "1.8.2"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
chex = "0.1.84"
click = "8.1.8"
cloudpickle = "3.1.1"
contourpy = "1.3.1"
cycler = "0.12.1"
decorator = "5.1.1"
distrax = "0.1.5"
dm-env = "1.6"
dm-tree = "0.1.8"
docker-pycreds = "0.4.0"
etils = "1.11.0"
farama-notifications = "0.0.4"
flask = "3.0.3"
flask-cors = "5.0.0"
flax = "0.7.4"
fonttools = "4.55.3"
fsspec = "2024.12.0"
gast = "0.6.0"
gitdb = "4.0.12"
gitpython = "3.1.44"
glfw = "2.8.0"
grpcio = "1.69.0"
gym = "0.26.2"
gym-notices = "0.0.8"
gymnasium = "1.0.0"
gymnax = "0.0.8"
humanize = "4.11.0"
hydra-core = "1.3.2"
idna = "3.10"
importlib-resources = "6.5.2"
itsdangerous = "2.2.0"
jax = "0.4.23"
jaxlib = "0.4.23"
jaxmarl = "0.0.7"
jaxopt = "0.8.3"
jinja2 = "3.1.5"
kiwisolver = "1.4.8"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
matplotlib = "3.10.0"
mdurl = "0.1.2"
ml-collections = "1.0.0"
msgpack = "1.1.0"
mujoco = "3.1.3"
mujoco-mjx = "3.1.3"
nest-asyncio = "1.6.0"
numpy = "1.26.4"
omegaconf = "2.3.0"
opt-einsum = "3.4.0"
optax = "0.1.7"
packaging = "24.2"
pandas = "2.2.3"
pillow = "11.1.0"
platformdirs = "4.3.6"
protobuf = "5.29.3"
psutil = "6.1.1"
pygments = "2.19.1"
pyopengl = "3.1.7"
pyparsing = "3.2.1"
python-dateutil = "2.9.0.post0"
pytinyrenderer = "0.0.14"
pytz = "2024.2"
pyyaml = "6.0.2"
requests = "2.32.3"
rich = "13.9.4"
safetensors = "0.5.2"
scipy = "1.12.0"
seaborn = "0.13.2"
sentry-sdk = "2.20.0"
setproctitle = "1.3.4"
simplejson = "3.19.3"
six = "1.17.0"
smmap = "5.0.2"
tensorboardx = "2.6.2.2"
tensorflow-probability = "0.25.0"
tensorstore = "0.1.71"
toolz = "1.0.0"
trimesh = "4.5.3"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.3.0"
wandb = "0.18.5"
werkzeug = "3.1.3"
zipp = "3.21.0"


